<resources>
    <string name="app_name">test-client-android</string>
    <string name="launch_aerosync">Launch Aerosync</string>
    <string name="aerosync_android_sdk">Aerosync Android SDK</string>
    <string name="enter_token">Enter Token</string>
    <string name="enter_aeropass">Enter Aeropass Id</string>
    <string name="enter_configuration_id">Enter Consumer ID</string>
    <string name="enter_job_id">Enter Job ID</string>
    <string name="enter_connection_id">Enter Connection ID</string>
    <string name="enter_aeropass_id">Enter Aeropass ID</string>
    <string name="manual_link_only">Manual Link Only?</string>
    <string name="handle_mfa">Handle MFA?</string>
</resources>
